--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section>
+        <div>
+            <h1><span>Skip</span> The Diet,Just Eat Healthy With Food Network</h1>
+            <p>imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+            <a target="_blank" href="https://www.linkedin.com/in/engr-md-ferdous-alam-0b8631103/">Order Food</a>
+        </div>
+
+        <div>
+            <img src="images/male/strongman" alt="">
+        </div>
+    </section>
+
+
+    <section></section>
+
+
+    <section></section>
+
+
+    <section></section>
+        <footer class="footer">
+<h1> <span>Eat</span> Fresh</h1>
+<p>Eat healthy to live healthy.Live healthy to live happy.</p>
+
+        </footer>
+
 </body>
 </html>
