first section done

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <div>
+    <section class="hero-section"> 
+        <div class="half-width first-div">
             <h1><span>Skip</span> The Diet,Just Eat Healthy With Food Network</h1>
             <p>imagine you don't need a diet because we provide healthy and delicious food for you!</p>
-            <a target="_blank" href="https://www.linkedin.com/in/engr-md-ferdous-alam-0b8631103/">Order Food</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/engr-md-ferdous-alam-0b8631103/">Order Food</a>
         </div>
 
-        <div>
-            <img src="images/male/strongman" alt="">
+        <div class="half-width">
+            <img style="height: 400px;" src="images/male/Strongman.png" alt="six pack man">
         </div>
     </section>
 
