about section done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
     </section>
 
 
-    <section></section>
+    <section class="about-me">
+
+        <div class="half-width">
+            <img style="width:450px;"  src="images/female/kisspng-healthy-diet-food-eating-nutrition-woman-diet-5b20e260c13c04.3441013515288817607915-removebg-preview.png" alt="girl holdinf fruits and vegitables">
+        </div>
+
+        <div class="half-width me-description">
+            <h1>About Me</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non rem eveniet praesentium. Nobis hic assumenda maiores sit unde mollitia nihil quis, obcaecati quos illo a dolorum dolore voluptatibus deserunt id.</p>
+            <a  class="link-button" target="_blank" href="https://www.linkedin.com/in/engr-md-ferdous-alam-0b8631103/">Contact me</a>
+        </div>
+    </section>
 
 
     <section></section>
