recipie section added

--- a/index.html
+++ b/index.html
@@ -35,11 +35,34 @@
     </section>
 
 
-    <section></section>
+    <section class="recipie">
+        <h1>My Recipies</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium ab libero nam illum voluptate. Illum eum ab enim iusto deleniti.</p>
+
+        <div class="recipie-item">
+            <div class="item1">
+                <img style="height: 200px;" src="images/food/Project Cover5.png" alt="">
+                <h3>Recipie Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, blanditiis!</p>
+            </div>
+
+            <div class="item2">
+                <img style="height: 200px;"  src="images/food/Project Cover8.png" alt="">
+                <h3>Recipie Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, blanditiis!</p>
+            </div>
+
+        </div>
+
+    </section>
 
 
-    <section></section>
-        <footer class="footer">
+    <section>
+
+    </section>
+        
+    
+    <footer class="footer">
 <h1> <span>Eat</span> Fresh</h1>
 <p>Eat healthy to live healthy.Live healthy to live happy.</p>
 
