counter section done

--- a/index.html
+++ b/index.html
@@ -57,8 +57,19 @@
     </section>
 
 
-    <section>
-
+    <section class="counter">
+        <div id="counter-item1">
+            <h1>700K</h1>
+            <h4>Youtube Subscribe</h4>
+        </div>
+        <div id="counter-item2">
+            <h1>2.4m</h1>
+            <h4>Instagram Followers</h4>
+        </div>
+        <div id="counter-item3">
+            <h1>100K</h1>
+            <h4>Dribble Shot Likes</h4>
+        </div>
     </section>
         
     
